<resources>
    <string name="app_name">My Home</string>
    <string name="profile">Profile</string>
    <string name="feedback">Feedback</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="apartment_info">Apartment Info</string>

    <string name="login_title">LoginActivity</string>

    <string name="password">Password</string>
    <string name="get_otp">Get OTP</string>
    <string name="no_account">No Account Yet? Sign Up</string>
    <string name="enter_code">Please enter One Time Password (OTP)</string>
    <string name="login">LogIn</string>
    <string name="change_mobile">Edit Mobile No</string>

    <string name="confirm_password">Retype Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="account_exists">Already have an account? Login Now</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="maintenance">Maintenance</string>
    <string name="maintenance_heading">Maintenance:</string>
    <string name="add_maintenance">Add Maintenance</string>
    <string name="pay_maintenance">Pay Maintenance</string>
    <string name="meetings">Meetings</string>
    <string name="events">Events</string>
    <string name="society_issues">Issues</string>

    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="default_name">John Doe</string>
    <string name="default_mobile">9876543210</string>
    <string name="default_email">john.doe@gmail.com</string>

    <string name="society">Society</string>
    <string name="apartment">Apartment</string>
    <string name="flat">Flat</string>
    <string name="month">Month</string>
    <string name="save">Save</string>
    <string name="get_tenants">Get Tenants</string>
    <string name="delete">DELETE</string>
    <string name="date">Date:</string>
    <string name="organizer">Organizer:</string>
    <string name="raised_by">Raised By</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_meeting">Add Meeting</string>
    <string name="add_event">Add Event</string>
    <string name="add_issue">Add Issue</string>
    <string name="meeting_date">Meeting Date</string>
    <string name="event_date">Event Date</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="no_meeting">No meetings found !</string>
    <string name="no_event">No events found !</string>
    <string name="no_issue">No Issue found !</string>

    <string name="drashti">Drashti Bangoria</string>
    <string name="avani">Avani Vanpariya</string>
    <string name="shyam">Shyam Kaila</string>
    <string name="harsh">Harsh Chudasama</string>
</resources>
