<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/profile"
        android:orderInCategory="100"
        android:title="@string/profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/help"
        android:icon="@drawable/baseline_help_outline_white_36"
        android:orderInCategory="200"
        android:title=""
        app:showAsAction="always" />
    <item
        android:id="@+id/apartment_info"
        android:orderInCategory="300"
        android:title="@string/apartment_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:orderInCategory="400"
        android:title="@string/about"
        app:showAsAction="never" />
    <item
        android:id="@+id/feedback"
        android:orderInCategory="500"
        android:title="@string/feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:orderInCategory="600"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>
