<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:padding="25dp"
    tools:context=".admin.AddMaintenance">

    <TextView
        android:id="@+id/societyLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:text="@string/society"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/societies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/societyLabel" />

    <TextView
        android:id="@+id/apartmentLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/societies"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:text="@string/apartment"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/apartments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/apartmentLabel" />

    <TextView
        android:id="@+id/monthLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/apartments"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:text="@string/month"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/months"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/monthLabel" />

    <TextView
        android:id="@+id/maintenanceLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/months"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:text="@string/maintenance"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/maintenance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/maintenanceLabel"
        android:inputType="number" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_maintenance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/maintenance"
        android:layout_marginTop="25dp"
        android:background="@color/orange"
        android:text="@string/add_maintenance"
        android:textColor="@color/white" />

    <ProgressBar
        android:id="@+id/progress"
        style="@android:style/Widget.Material.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="150dp"
        android:background="@color/light_gray"
        android:indeterminate="true"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:visibility="invisible" />
</RelativeLayout>