<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:padding="25dp"
    tools:context=".issue.AddIssueActivity">

    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:text="@string/title"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/issue_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleLabel" />

    <TextView
        android:id="@+id/descriptionLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/issue_title"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:text="@string/description"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/issue_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descriptionLabel" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_issue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/issue_description"
        android:layout_marginTop="25dp"
        android:background="@color/orange"
        android:text="@string/add_issue"
        android:textColor="@color/white" />
</RelativeLayout>