<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:padding="25dp"
    tools:context=".event.AddEventActivity">

    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:text="@string/title"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleLabel" />

    <TextView
        android:id="@+id/descriptionLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/event_title"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:text="@string/description"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/event_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descriptionLabel" />

    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/event_description"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:text="@string/event_date"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/dateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dateLabel"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/event_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.80"
            android:padding="5dp"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/select_event_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:src="@drawable/baseline_date_range_black_36" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateLayout"
        android:layout_marginTop="25dp"
        android:background="@color/orange"
        android:text="@string/add_event"
        android:textColor="@color/white" />
</RelativeLayout>