<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".event.EventActivity">

    <LinearLayout
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.50"
            android:padding="5dp"
            android:text="@string/society"
            android:textColor="@color/orange"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/society"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.50"
            android:padding="5dp"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/monthLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heading"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:text="@string/month"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/months"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/monthLabel" />

    <LinearLayout
        android:id="@+id/maintenanceLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/months"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:padding="5dp"
            android:text="@string/maintenance_heading"
            android:textColor="@color/orange"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tenant_maintenance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:padding="5dp"
            android:textAlignment="textStart"
            android:textSize="18sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/pay_maintenance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/maintenanceLayout"
        android:layout_marginTop="25dp"
        android:background="@color/orange"
        android:text="@string/pay_maintenance"
        android:textColor="@color/white" />

    <ProgressBar
        android:id="@+id/progress"
        style="@android:style/Widget.Material.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="150dp"
        android:background="@color/light_gray"
        android:indeterminate="true"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:visibility="invisible" />

</RelativeLayout>